Add more changes to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale: "en-US"
 title: "Manuel Agraz Vallejo"
 title_separator: "-"
 name: &name "Manuel Agraz Vallejo"
-description: &description "personal description"
+description: &description "I am a Mechatronics Engineer"
 url: https://magraz.github.io/manuel_agraz.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: "" # the subpath of your site, e.g. "/blog"
 repository: "Magraz/manuel_agraz.github.io"
