--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name: "Manuel Agraz Vallejo"
-  avatar: "profile.png"
+  avatar: "me.jpg"
   bio: "Mechatronics Engineer, currently pursuing a MS in Robotics at Oregon State University"
   location: "Corvallis, OR"
   employer:
