--- a/_config.yml
+++ b/_config.yml
@@ -94,13 +94,13 @@ author:
   flickr:
   facebook:
   foursquare:
-  github: "https://github.com/Magraz"
+  github: "Magraz"
   google_plus:
   keybase:
   instagram:
   impactstory: #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm:
-  linkedin: "https://www.linkedin.com/in/manuel-agraz-vallejo/"
+  linkedin: "manuel-agraz-vallejo"
   orcid: #"http://orcid.org/yourorcidurl"#
   pinterest:
   soundcloud:
